--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,26 @@
 * {
-  background: #1C1C1C;
   color: #FFFFFF;
   font-family: "Roboto", sans-serif;
   padding: 0;
   margin: 0;
 }
 
+body {
+  background: #1C1C1C;
+  font-size: 18px;
+}
+
 header {
+  background-image: url("/images/portrait.png");
+  background-size: 1252px;
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  height: 100vh;
+}
+
+header nav {
   padding: 40px 0;
+  font-weight: 700;
 }
 
 header nav ul {
@@ -40,9 +53,44 @@ header nav ul a:hover {
   transition: all ease .3s;
 }
 
+header .intro {
+  padding-top: 300px;
+  height: 100vh;
+  font-size: 73px;
+  font-weight: 300;
+  padding-left: 300px;
+}
+
+header .intro span {
+  font-weight: 700;
+  color: #FF6D85;
+}
+
 .active {
   color: #FF6D85;
   padding-bottom: 5px;
   border-bottom: 2px solid #FF6D85;
+}
+
+.buttons {
+  margin-top: 40px;
+}
+
+.button1 {
+  background: #FF6D85;
+  padding: 17px 73px;
+  font-size: 18px;
+  border-radius: 3px;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+.button2 {
+  background: none;
+  padding: 17px 73px;
+  border: none;
+  font-size: 18px;
+  font-weight: 700;
+  text-decoration: underline;
 }
 /*# sourceMappingURL=style.css.map */
