--- a/style/style.css
+++ b/style/style.css
@@ -1,151 +1,269 @@
-* {
-  color: #FFFFFF;
-  font-family: "Roboto", sans-serif;
-  padding: 0;
-  margin: 0;
+@media screen and (max-width: 550px) {
+  * {
+    color: #FFFFFF;
+    font-family: "Roboto", sans-serif;
+    padding: 0;
+    margin: 0;
+  }
+  body {
+    background: #1C1C1C;
+    font-size: 18px;
+  }
+  header {
+    background-image: url("/images/portrait.png");
+    background-size: 750px;
+    background-repeat: no-repeat;
+    background-position: -215 bottom;
+    height: 100vh;
+  }
+  header nav {
+    display: none;
+    padding: 40px 0;
+    font-weight: 700;
+  }
+  header nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    list-style: none;
+  }
+  header nav ul li {
+    padding: 0 20px;
+  }
+  header nav ul a {
+    cursor: pointer;
+    text-decoration: none;
+    margin: 0;
+  }
+  header nav ul a:hover {
+    color: #FF6D85;
+    text-shadow: 0 0 36px #FF6D85;
+    -webkit-transition: all ease .3s;
+    transition: all ease .3s;
+  }
+  header .intro {
+    padding: 100px 20px 20px 20px;
+    font-size: 28px;
+    font-weight: 300;
+    text-align: center;
+  }
+  header .intro span {
+    font-weight: 700;
+    color: #FF6D85;
+  }
+  .active {
+    color: #FF6D85;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #FF6D85;
+    text-shadow: 0 0 36px #FF6D85;
+  }
+  .buttons {
+    margin-top: 40px;
+  }
+  .button1 {
+    background: #FF6D85;
+    padding: 17px 50px;
+    font-size: 18px;
+    border-radius: 3px;
+    font-weight: 700;
+    text-decoration: none;
+  }
+  .button1:hover {
+    background: #ff3a5a;
+    -webkit-transition: all ease .3s;
+    transition: all ease .3s;
+    -webkit-box-shadow: 0 0 75px rgba(255, 109, 133, 0.5);
+            box-shadow: 0 0 75px rgba(255, 109, 133, 0.5);
+  }
+  .button2 {
+    background: none;
+    padding: 17px 50px;
+    border: none;
+    font-size: 18px;
+    border-radius: 3px;
+    font-weight: 700;
+    text-decoration: underline;
+  }
+  .button2:hover {
+    -webkit-transition: all ease .3s;
+    transition: all ease .3s;
+    color: #FF6D85;
+    text-shadow: 0 0 36px #FF6D85;
+  }
+  .tooltip {
+    position: relative;
+    display: inline-block;
+  }
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 150px;
+    background-color: #FFFFFF;
+    color: black;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -73px;
+    opacity: 0;
+    -webkit-transition: opacity 0.3s;
+    transition: opacity 0.3s;
+  }
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #FFFFFF transparent transparent transparent;
+  }
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
 }
 
-body {
-  background: #1C1C1C;
-  font-size: 18px;
-}
-
-header {
-  background-image: url("/images/portrait.png");
-  background-size: 1252px;
-  background-repeat: no-repeat;
-  background-position: bottom right;
-  height: 100vh;
-}
-
-header nav {
-  padding: 40px 0;
-  font-weight: 700;
-}
-
-header nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  list-style: none;
-}
-
-header nav ul li {
-  padding: 0 20px;
-}
-
-header nav ul a {
-  cursor: pointer;
-  text-decoration: none;
-  margin: 0;
-}
-
-header nav ul a:hover {
-  color: #FF6D85;
-  text-shadow: 0 0 36px #FF6D85;
-  -webkit-transition: all ease .3s;
-  transition: all ease .3s;
-}
-
-header .intro {
-  padding-top: 300px;
-  font-size: 73px;
-  font-weight: 300;
-  padding-left: 300px;
-}
-
-header .intro span {
-  font-weight: 700;
-  color: #FF6D85;
-}
-
-.active {
-  color: #FF6D85;
-  padding-bottom: 5px;
-  border-bottom: 2px solid #FF6D85;
-  text-shadow: 0 0 36px #FF6D85;
-}
-
-.buttons {
-  margin-top: 40px;
-}
-
-.button1 {
-  background: #FF6D85;
-  padding: 17px 73px;
-  font-size: 18px;
-  border-radius: 3px;
-  font-weight: 700;
-  text-decoration: none;
-}
-
-.button1:hover {
-  background: #ff3a5a;
-  -webkit-transition: all ease .3s;
-  transition: all ease .3s;
-  -webkit-box-shadow: 0 0 75px rgba(255, 109, 133, 0.5);
-          box-shadow: 0 0 75px rgba(255, 109, 133, 0.5);
-}
-
-.button2 {
-  background: none;
-  padding: 17px 73px;
-  border: none;
-  font-size: 18px;
-  border-radius: 3px;
-  font-weight: 700;
-  text-decoration: underline;
-}
-
-.button2:hover {
-  -webkit-transition: all ease .3s;
-  transition: all ease .3s;
-  color: #FF6D85;
-  text-shadow: 0 0 36px #FF6D85;
-}
-
-.tooltip {
-  position: relative;
-  display: inline-block;
-}
-
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 150px;
-  background-color: #FFFFFF;
-  color: black;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-  position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -73px;
-  opacity: 0;
-  -webkit-transition: opacity 0.3s;
-  transition: opacity 0.3s;
-}
-
-.tooltip .tooltiptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #FFFFFF transparent transparent transparent;
-}
-
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
+@media screen and (min-width: 550px) {
+  * {
+    color: #FFFFFF;
+    font-family: "Roboto", sans-serif;
+    padding: 0;
+    margin: 0;
+  }
+  body {
+    background: #1C1C1C;
+    font-size: 18px;
+  }
+  header {
+    background-image: url("/images/portrait.png");
+    background-size: 1252px;
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    height: 100vh;
+  }
+  header nav {
+    padding: 40px 0;
+    font-weight: 700;
+  }
+  header nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    list-style: none;
+  }
+  header nav ul li {
+    padding: 0 20px;
+  }
+  header nav ul a {
+    cursor: pointer;
+    text-decoration: none;
+    margin: 0;
+  }
+  header nav ul a:hover {
+    color: #FF6D85;
+    text-shadow: 0 0 36px #FF6D85;
+    -webkit-transition: all ease .3s;
+    transition: all ease .3s;
+  }
+  header .intro {
+    padding-top: 300px;
+    font-size: 73px;
+    font-weight: 300;
+    padding-left: 300px;
+  }
+  header .intro span {
+    font-weight: 700;
+    color: #FF6D85;
+  }
+  .active {
+    color: #FF6D85;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #FF6D85;
+    text-shadow: 0 0 36px #FF6D85;
+  }
+  .buttons {
+    margin-top: 40px;
+  }
+  .button1 {
+    background: #FF6D85;
+    padding: 17px 73px;
+    font-size: 18px;
+    border-radius: 3px;
+    font-weight: 700;
+    text-decoration: none;
+  }
+  .button1:hover {
+    background: #ff3a5a;
+    -webkit-transition: all ease .3s;
+    transition: all ease .3s;
+    -webkit-box-shadow: 0 0 75px rgba(255, 109, 133, 0.5);
+            box-shadow: 0 0 75px rgba(255, 109, 133, 0.5);
+  }
+  .button2 {
+    background: none;
+    padding: 17px 73px;
+    border: none;
+    font-size: 18px;
+    border-radius: 3px;
+    font-weight: 700;
+    text-decoration: underline;
+  }
+  .button2:hover {
+    -webkit-transition: all ease .3s;
+    transition: all ease .3s;
+    color: #FF6D85;
+    text-shadow: 0 0 36px #FF6D85;
+  }
+  .tooltip {
+    position: relative;
+    display: inline-block;
+  }
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 150px;
+    background-color: #FFFFFF;
+    color: black;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -73px;
+    opacity: 0;
+    -webkit-transition: opacity 0.3s;
+    transition: opacity 0.3s;
+  }
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #FFFFFF transparent transparent transparent;
+  }
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
 }
 /*# sourceMappingURL=style.css.map */
