Background image alterations

--- a/style/style.css
+++ b/style/style.css
@@ -146,7 +146,7 @@
   }
   header {
     background-image: url("/images/portrait.png");
-    background-size: 1252px;
+    background-size: 70%;
     background-repeat: no-repeat;
     background-position: bottom right;
     height: 100vh;
