--- a/style/style.scss
+++ b/style/style.scss
@@ -167,7 +167,7 @@ $gray: #1C1C1C;
     
     header {
         background-image: url("/images/portrait.png");
-        background-size: 1252px;
+        background-size: 70%;
         background-repeat: no-repeat;
         background-position: bottom right;
         height: 100vh;
