--- a/style/style.scss
+++ b/style/style.scss
@@ -2,6 +2,10 @@ $pink: #FF6D85;
 $white: #FFFFFF;
 $gray: #1C1C1C;
 
+.container {
+    padding: 0 20px;
+}
+
 
 
 // Mobile
@@ -17,12 +21,15 @@ $gray: #1C1C1C;
         background: $gray;
         font-size: 18px;
     }
-    
-    header {
+
+    #header {
         background-image: url("/images/portrait.png");
         background-size: 750px;
         background-repeat: no-repeat;
         background-position: -215 bottom;
+    }
+    
+    header {
         height: 100vh;
         nav {
             display: none;
@@ -164,13 +171,22 @@ $gray: #1C1C1C;
         background: $gray;
         font-size: 18px;
     }
-    
-    header {
+
+    #header {
         background-image: url("/images/portrait.png");
         background-size: 70%;
         background-repeat: no-repeat;
         background-position: bottom right;
         height: 100vh;
+    }
+
+    #page-header {
+        nav {
+            box-shadow: 0 3px 6px rgba($color: #000000, $alpha: .15);
+        }
+    }
+    
+    header {
         nav {
             padding: 40px 0;
             font-weight: 700;
@@ -202,6 +218,15 @@ $gray: #1C1C1C;
             span {
                 font-weight: 700;
                 color: $pink;
+            }
+        }
+        .showcase {
+            text-align: center;
+            padding: 60px 0;
+            margin: 0;
+            h1 {
+                font-size: 51px;
+                padding-bottom: 15px;
             }
         }
     }
@@ -282,6 +307,18 @@ $gray: #1C1C1C;
       .tooltip:hover .tooltiptext {
         visibility: visible;
         opacity: 1;
+      }
+
+      .portfolio {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        a {
+            margin: 10px;
+        }
+        img {
+            max-width: 100%;
+        }
       }
     
   }
